# esp32-s3_insta221

./: .gitignore  AUTOTUNE_INTEGRATION_SUMMARY.md  CMakeLists.txt  DEAD_CODE_ANALYSIS.md  FILE_SPLIT_SUMMARY.md  INCLUDE_HIERARCHY.md  PID_AUTOTUNE_GUIDE.md  PID_AUTOTUNE_SUMMARY.md  PID_PARAMETERS_2200W.md  QUICK_REFERENCE.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REFACTORING_TASK1_SUMMARY.md  RELEASE_GUIDE.md  SIMULATION_MODE.md  UDEV_RULES_ANALYSIS.md  UI_STATE_SPLIT_GUIDE.md  create_release.sh  extract_ui_code.sh  openocd.cfg  sdkconfig  sdkconfig.defaults
include/: main.h  (+5 more)
main/: CMakeLists.txt  data_model.c  main.c  main.h  system_constants.h  temp_control.c  temp_control.h  ui_helpers.c  ui_renderers.c  ui_renderers_internal.h  ui_state.c  ui_state.h  ui_state_internal.h  watchdog_helpers.c  watchdog_helpers.h
main/components/controls/: controls.c
main/components/controls/include/: controls.h
main/components/display/: display.c
main/components/heating/: CMakeLists.txt  heating.c
main/components/sensors/: CMakeLists.txt  sensors.c
main/components/storage/: CMakeLists.txt  storage.c
main/include/: main.h  ui_state.h
main/pid/: pid_autotune.c  pid_autotune.h  pid_controller.c  pid_controller.h
main/utils/: application_state.c  application_state.h  system_config.c  system_config.h
tests/: CMakeLists.txt  test_controls.c  test_display.c  test_heating.c  test_menu_navigation.c  test_pressing_cycle.c  test_sensor.c  test_settings_persistence.c  test_storage.c  test_temp_regulation.c
tests/unit/: test_performance.c  test_validation.c
(+25 files in other folders)
